--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,10 @@
         "guzzlehttp/psr7": "^1.6",
         "http-interop/http-factory-guzzle": "^1.0",
         "zendframework/zend-diactoros": "^2.1"
+    },
+    "autoload": {
+        "psr-4": {
+            "MyApp\\" : "src/MyApp"
+        }
     }
 }
