Middleware, respostas e databse

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "nyholm/psr7-server": "^0.3.0",
         "guzzlehttp/psr7": "^1.6",
         "http-interop/http-factory-guzzle": "^1.0",
-        "zendframework/zend-diactoros": "^2.1"
+        "zendframework/zend-diactoros": "^2.1",
+        "illuminate/database": "^6.2"
     },
     "autoload": {
         "psr-4": {
